g2p_ati_service_provider_portal/static/src/css/style.css
/* ... */
.card {
    width: 1200px;
    box-shadow: 0px 2px 5px #0000001a;
    border-radius: 10px;
    opacity: 1;
}

body {
    font-family: "Arial", sans-serif;
    background-color: #f4f4f9;
    color: #333;
    margin: 0;
    display: flex;
    justify-content: center;
    /* align-items: center; */
    min-height: 100vh;
}
.form-container {
    background: #fff;
    border-radius: 10px;
    box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
    padding: 20px;
    max-width: 500px;
    width: 100%;
}
h1 {
    text-align: center;
    color: #5d5c61;
}
.section {
    border: 1px solid #ddd;
    border-radius: 5px;
    padding: 15px;
    margin-bottom: 15px;
    background-color: #fafafa;
}
.section label {
    display: block;
    margin-bottom: 5px;
    font-weight: bold;
}
.section input,
.section select {
    width: calc(100% - 20px);
    padding: 8px;
    margin-bottom: 10px;
    border: 1px solid #ccc;
    border-radius: 4px;
}
.section-container {
    width: 100%;
    display: flex;
    flex-direction: column;
    min-height: 600px; /* Ensure the section takes the full viewport height */
    position: relative;
}

.section-content {
    flex: 1 1 auto;
    min-height: 600px;
    padding-left: 1.5rem;
    padding-right: 1.5rem;
}

.section-footer {
    flex-shrink: 0;
    display: flex;
    justify-content: flex-end;
    position: relative;
    padding: 10px;

    margin: 0px 10px;
    border-top: 1px solid #ddd;
    margin-bottom: 10px;
    display: grid;
    grid-template-columns: auto auto;
    column-gap: 20px;
}

input[type="radio"] {
    accent-color: #06916b;
}

.custom-dashboard-background {
    position: relative;
    z-index: 1;
    margin: 0;
    padding: 0;
    width: 100%;
    height: 100%;
}

.custom-dashboard-background::before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-image: url("/g2p_ati_service_provider_portal/static/src/img/crop.jpg");
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    opacity: 0.4; /* Adjust transparency level */
    z-index: -1;
}

.card-container {
    display: flex;
    justify-content: center; /* Centers the cards horizontally */
    align-items: center; /* Centers the cards vertically */
    flex-direction: row;
    margin: 50px auto 0 auto; /* Adds margin from the main container on top */
    transform: translateX(20%); /* Moves the content to the right */
}

.card-container-mini {
    width: 60%; /* Adjusts the width of the cards to make them bigger */
    height: auto;
    margin-bottom: 30px; /* Adds spacing between cards */
}

.card {
    width: 90%; /* Increases the size of the cards */
    height: auto;
    margin-top: 80px;
    padding-top: 20px;
}

.card img {
    width: 100px; /* Makes the icons bigger */
    height: 80px;
    margin-top: 8%;
    margin-left: 40%;
    margin-bottom: 3%;
}

.gradient-card {
    width: 300px;
    background: linear-gradient(135deg, #f3f9a7 0%, #ffffff 100%); /* Green to white gradient */
    border-radius: 15px;
    padding: 20px;
    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2); /* Adds shadow for depth */
    color: #ffffff; /* Ensures text color is visible on the gradient */
}

.card-heading {
    font-size: 18px;
    font-weight: bold;
    text-align: center;
    margin-left: 0px !important;
}

.card p {
    font-size: 12px;
}

.card-foot a {
    font-size: 16px;
    color: #09a261;
}

.buttons {
    text-align: right;
}
.buttons button {
    background-color: #28a745;
    border: none;
    color: #fff;
    padding: 10px 15px;
    border-radius: 5px;
    cursor: pointer;
    margin-left: 5px;
    transition: background-color 0.3s ease;
}
.buttons button.delete {
    background-color: #dc3545;
}
.buttons button:hover {
    background-color: #06916b;
}
.buttons button.delete:hover {
    background-color: #c82333;
}
.delete-icon {
    cursor: pointer;
    transition: transform 0.2s ease;
}
.delete-icon:hover {
    transform: scale(1.1);
}
.add-button-container {
    text-align: center;
    margin-top: 20px;
}
.add-button-container button {
    background-color: #06916b;
    border: none;
    color: #fff;
    padding: 10px 20px;
    border-radius: 5px;
    cursor: pointer;
    transition: background-color 0.3s ease;
}
.add-button-container button:hover {
    background-color: #06916b;
}

.addLine {
    color: #06916b;
    background-color: #f0fff0;
    border: none;
    padding: 10px 20px;
    border-radius: 5px;
    margin-right: 50px;
}

.btn-primary {
    background-color: #06916b;
    color: white;
    border-color: #06916b;
}

.btn-primary:hover {
    background-color: #06916b;
    color: white;
}

.selectpicker option:checked::after {
    display: none !important; /* Important to override Bootstrap's default */
}

#land_selection option:hover {
    background-color: green;
}

/* Style for the radio button container */
.form-check-input[type="radio"] {
    appearance: none;
    background-color: white;
    border: 1px solid #06916b;
    border-radius: 50%;
    width: 24px;
    height: 24px;
    position: relative;
    cursor: pointer;
}

/* Ensure the border color is green */
.form-check-input[type="radio"]:checked,
.form-check-input[type="radio"]:focus {
    border-color: #06916b;
}

/* Style for the checked state */
.form-check-input[type="radio"]:checked::before {
    content: "";
    display: block;
    width: 14px; /* Adjusted to center the inner circle */
    height: 14px; /* Adjusted to center the inner circle */
    border-radius: 50%;
    background-color: #06916b;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%); /* Center the inner circle */
}
/* ... */

